[master] version update
